# schema-registry-demo

./: Cargo.toml  README.md  docker-compose.yml  schema.avsc
client/: Cargo.toml
client/src/: main.rs
producer/: Cargo.toml
producer/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
