[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avro-rs = "0.13.0"
rdkafka = "0.29.0"
schema_registry_converter = { version = "3.1.0", features = ["blocking", "avro"] }
tokio = { version = "1.27.0", features = ["full"] }
shared = { path = "../shared" }
apache-avro = "0.14.0"
