[package]
name = "producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = "2.5.0"
rand = "0.8.5"
rdkafka = "0.29.0"
schema_registry_converter = { version = "3.1.0", features = ["avro", "blocking"] }
tokio = { version = "1.27.0", features = ["full"] }
shared = { path = "../shared" }
